--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 74c07c64
-	base = 039bcdc0
-	trim = 
-	trimbase = 
+	base = 9017763c
+	trim = octovis
+	trimbase = 039bcdc0
