--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 74c07c64
-	base = c9f55a7e
-	trim = 
-	trimbase = 
+	base = a2a958b9
+	trim = octomap
+	trimbase = c9f55a7e
