--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 74c07c64
-	base = 356060e6
-	trim = 
-	trimbase = 
+	base = 63d83313
+	trim = dynamicEDT3D
+	trimbase = 356060e6
