--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/octomap
-	previous = 
-	base = a2a958b9
+	previous = a2a958b9
+	base = 52ec98a7
 	trim = 
 	trimbase = 
