--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/octomap
-	previous = 
-	base = e621750e
+	previous = e621750e
+	base = 78a1fc78
 	trim = 
 	trimbase = 
