--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/dynamic_edt_3d
-	previous = 
-	base = bac6892f
+	previous = bac6892f
+	base = d82070cc
 	trim = 
 	trimbase = 
