--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/octovis
-	previous = 
-	base = 0bcfabc2
+	previous = 0bcfabc2
+	base = 3198b5bb
 	trim = 
 	trimbase = 
