--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/octomap
-	previous = 
-	base = 404bebb0
+	previous = 404bebb0
+	base = b08b75be
 	trim = 
 	trimbase = 
