--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/octovis
-	previous = 
-	base = 2b66aeb0
+	previous = 2b66aeb0
+	base = 88f94582
 	trim = 
 	trimbase = 
