--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/dynamic_edt_3d
-	previous = 
-	base = ab7677fc
+	previous = ab7677fc
+	base = e439db67
 	trim = 
 	trimbase = 
