--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/octovis
-	previous = 
-	base = 9017763c
+	previous = 9017763c
+	base = 6ded302e
 	trim = 
 	trimbase = 
