--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/octovis
-	previous = 
-	base = 19ee6744
+	previous = 19ee6744
+	base = 00b6ddab
 	trim = 
 	trimbase = 
