--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/octomap
-	previous = 
-	base = ed359d79
+	previous = ed359d79
+	base = af7a28f8
 	trim = 
 	trimbase = 
