--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamic_edt_3d
-	previous = 
-	base = 63d83313
+	previous = 63d83313
+	base = 863e2f1d
 	trim = 
 	trimbase = 
