--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/dynamic_edt_3d
-	previous = 
-	base = d6bdce54
+	previous = d6bdce54
+	base = 4c1db02c
 	trim = 
 	trimbase = 
