--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5e74f67
-	base = 846352f9
+	base = 1a01d414
 	trim = octovis
-	trimbase = 
+	trimbase = 846352f9
