--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5e74f67
-	base = 8fb02cee
+	base = a6313dd5
 	trim = octomap
-	trimbase = 
+	trimbase = 8fb02cee
