--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c5e74f67
-	base = 5b3392c2
+	base = e32d4c57
 	trim = dynamicEDT3D
-	trimbase = 
+	trimbase = 5b3392c2
