--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.9.7-2": ["Tue Feb 08 2022", "Christoph Sprunk", "sprunkc@informatik.uni-freiburg.de"]}
+{"1.9.7-3": ["Tue Apr 19 2022", "Christoph Sprunk", "sprunkc@informatik.uni-freiburg.de"], "1.9.7-2": ["Tue Feb 08 2022", "Christoph Sprunk", "sprunkc@informatik.uni-freiburg.de"]}
